--- a/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
+++ b/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
@@ -58,6 +58,8 @@
                                     {^saving}="formState.saving"
                                     {^all-saved}="formState.allSaved"
                                     {^is-dirty}="formState.isDirty"
+                                    {evidence-amount}="instance.documents.length"
+                                    (validation-changed)="showRequiredInfoModal(%event)"
                     ></auto-save-form>
                   <!-- Modal Window to fix validation issues of CA fields -->
                     <simple-modal {(state)}="modal.state" {modal-title}="modal.modalTitle" {instance}="instance">
