--- a/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
+++ b/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
@@ -45,8 +45,7 @@
                                     </unmap-button>
                                 </editable-document-object-list-item>
                             </object-list>
-                            <attach-button {instance}="instance">
-                            </attach-button>
+                            <attach-button {instance}="instance"></attach-button>
                         </div>
                         <assessment-urls-list {mapped-items}="urls"></assessment-urls-list>
                     </div>
