--- a/src/ggrc/assets/stylesheets/components/action-toolbar/_action-toolbar.scss
+++ b/src/ggrc/assets/stylesheets/components/action-toolbar/_action-toolbar.scss
@@ -6,17 +6,22 @@
 .action-toolbar {
   position: relative;
   display: flex;
+  min-width: 0;
+
+  &:hover {
+    .action-toolbar__controls {
+      display: flex;
+    }
+  }
 
   &__controls {
-    display: flex;
+    display: none;
     flex-direction: row;
+    align-items: flex-start;
     position: relative;
-    top: -4px;
-    min-width: 0;
   }
 
   &__content-item {
-    flex: 1;
     min-width: 0;
   }
 
@@ -26,13 +31,13 @@
     justify-content: center;
     height: 28px;
     width: 28px;
-    border-radius: 14px;
-    background: #333;
+    border-radius: 50%;
+    background: #444;
     cursor: pointer;
     margin: 0 0 0 8px;
 
     &:hover {
-      background: darken(#333, 10%);
+      background: darken(#444, 10%);
       box-shadow: 0 1px 10px -1px rgba(0, 0, 0, 0.4);
     }
 
@@ -40,7 +45,7 @@
       opacity: 0.25;
 
       &:hover {
-        background: #333;
+        background: #444;
         box-shadow: none;
       }
     }
@@ -48,6 +53,14 @@
     .fa {
       color: $white;
       font-size: 18px;
+      height: 28px;
+      line-height: 28px;
+      width: 28px;
+      display: inline-flex;
+      justify-content: center;
+      align-self: center;
+      align-items: center;
+      text-align: center;
     }
   }
 }
