--- a/src/ggrc/assets/stylesheets/components/mapped-objects/_mapped-objects.scss
+++ b/src/ggrc/assets/stylesheets/components/mapped-objects/_mapped-objects.scss
@@ -93,6 +93,7 @@ assessment-mapped-controls, assessment-mapped-related-information {
   flex-direction: column;
   padding: 0;
   margin: 0 0 16px;
+  min-width: 0;
 
   &.document-object-item__with-icon {
     position: relative;
@@ -112,9 +113,10 @@ assessment-mapped-controls, assessment-mapped-related-information {
   }
 
   .document-object-item__body {
-    flex: 0 1;
+    flex: 1;
     display: flex;
     flex-direction: column;
+    min-width: 0;
 
     .link {
       font-style: italic;
