Revert "GGRC-1944 Unified mapper duplicated if click "Map to this object" in Assessment first tier twice "

--- a/src/ggrc/assets/mustache/components/tree/tree-item-map.mustache
+++ b/src/ggrc/assets/mustache/components/tree/tree-item-map.mustache
@@ -6,14 +6,17 @@
 {{#is_allowed_to_map instance model.shortName}}
   {{#if allow_mapping_or_creating}}
     <a class="{{cssClasses}}"
-      href="javascript://"
-      rel="tooltip"
-      data-placement="left"
-      data-toggle="unified-mapper"
-      data-join-object-id="{{instance.id}}"
-      data-join-object-type="{{instance.class.shortName}}"
+       href="javascript://"
+       {{#if disableLink}}
+         class="disabled"
+       {{/if}}
+       rel="tooltip"
+       data-placement="left"
+       data-toggle="unified-mapper"
+       data-join-object-id="{{instance.id}}"
+       data-join-object-type="{{instance.class.shortName}}"
       {{#if_instance_of instance "Section"}}
-      data-object-params='{{objectParams}}'
+       data-object-params='{{objectParams}}'
       {{/if_instance_of}}
     >
       <i class="fa fa-code-fork"></i>
